# ordinary-least-squares

./: CMakeLists.txt  README.md
benchmark/: benchmark.csv  benchmark_run1.txt  benchmark_run2.txt  benchmark_run3.txt
inc/: benchmark.h  command.h  read_input_files.h  setup_compute.h  write_output.h
include/: benchmark.h  command.h  estimate_OLS.h  process_cmd_args.h  read_input_files.h  utilities.h  write_output.h
src/: CMakeLists.txt  benchmark.cpp  command.cpp  estimate_OLS.cpp  main.cpp  process_cmd_args.cpp  read_input_files.cpp  setup_compute.cpp  write_output.cpp
test/: OLSest.csv  XMAT.csv  yVEC.csv
